--- a/corralon-boundaries/src/main/resources/application.properties
+++ b/corralon-boundaries/src/main/resources/application.properties
@@ -1,13 +1,2 @@
 server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/santo_domingo_corralon?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Ad46b36ff
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-
-#drop n create table again, good for testing, comment this in production
-spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-#Dependencia incorrecta
-#spring.jpa.properties.hibernate.jdbc.lUnnamedob.non_contextual_creation=true
-
+spring.profiles.active=dev 
